Optimize compilation - Expression compiler should now be O(n) instead of O(n^2) for string length